--- a/book/drug-discovery/molecular-dynamics.mdx
+++ b/book/drug-discovery/molecular-dynamics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Molecular dynamics simulations
 date: 2020-08-06
-slug: md
+slug: dd/molecular-dynamics
 ---
 
 ## _Molecular dynamics simulations: advances and applications_[^1]
