--- a/book/genomics/genome-browsers.mdx
+++ b/book/genomics/genome-browsers.mdx
@@ -1,12 +1,11 @@
 ---
-
-
+title: Genome browsers
+date: 2020-08-07
+slug: genomics/browsers
 ---
 
-# An Introduction to Genome Browsers
-
+## Concepts
 * A **track** in a genome browser is a set of precomputed annotation data.
 
 ## References
-
 * Jun Wang, Lei Kong, Ge Gao, Jingchu Luo, A brief introduction to web-based genome browsers, _Briefings in Bioinformatics_, Volume 14, Issue 2, March 2013, Pages 131–143, https://doi.org/10.1093/bib/bbs029
