--- a/book/genomics/next-gen-seq.mdx
+++ b/book/genomics/next-gen-seq.mdx
@@ -4,5 +4,5 @@ date: 2020-08-06
 slug: genomics/ngs
 ---
 
+## References
 * Kulski, **Next generation sequencing &ndash; An overview of the history, tools, and &ldquo;omic&rdquo; applications.** ([ipfs](https://ipfs.io/ipfs/QmbqMjV59nvG5nxz3unnAHdeVFwgCW23qDUUdsWSP6VBqz))
-
