--- a/book/drug-discovery/overview.mdx
+++ b/book/drug-discovery/overview.mdx
@@ -1,9 +1,10 @@
 ---
-title: Overview of _Drug Discovery_
+title: Overview of <i>Drug Discovery</i>
 date: 2020-08-07
 slug: dd
 ---
 
 * [Molecular dynamics](./molecular-dynamics)
-* [Molecular Operating Environment](./moe)
+* [Molecular operating environment](./moe)
 * [Protein folding](./folding)
+* [Therapeutics and drug design](./design)
