--- a/book/drug-discovery/therapeutics.mdx
+++ b/book/drug-discovery/therapeutics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Therapeutics and drug design
 date: 2020-08-04
-slug: drug-design
+slug: dd/design
 ---
 
 ## Therapeutic modalities
@@ -26,6 +26,6 @@ slug: drug-design
 
 
 ## New technologies
-* Human kidney organoids (Dvela-Levitt et al., Cell, 2019) ([ipfs](https://ipfs.io/ipfs/Qmc8Zxpw5KKAXWm39Ta8bw44mwRn24CFmA6RCHsr34d2ED))
+* Human kidney organoids, MUC1 (Dvela-Levitt et al., Cell, 2019) ([ipfs](https://ipfs.io/ipfs/Qmc8Zxpw5KKAXWm39Ta8bw44mwRn24CFmA6RCHsr34d2ED))
 
 ![technologies](./assets/therapeutic-technologies.png)
