--- a/book/drug-discovery/overview.mdx
+++ b/book/drug-discovery/overview.mdx
@@ -8,3 +8,6 @@ slug: dd
 * [Molecular operating environment](./moe)
 * [Protein folding](./folding)
 * [Therapeutics and drug design](./design)
+
+## Additional resources
+* _Pathways of human cancer._ ([ipfs](https://ipfs.io/ipfs/QmZcSgZJSFdRKcczE38y8k5QEHpvcBM9DwtGostECRMaCV))
